--- a/es6-part1/index.html
+++ b/es6-part1/index.html
@@ -39,7 +39,7 @@
 	<body>
 
   <div class="reveal">
-    <img class="um-logo" src="/images/umlogo_white.png">
+    <img class="um-logo" src="images/umlogo_white.png">
 
 			<!-- Any section element inside of this container is displayed as a slide -->
       <div class="slides">
