--- a/es6-primer/index.html
+++ b/es6-primer/index.html
@@ -200,9 +200,34 @@ alert(gen(1000));
         <li>call(), apply(), bind() do not work</li>
       </aside>
     </section>
-    
+
+
+
+    <!-- Object destructuring -->
     <section>
-      <h2>Classes</h2>
+      <h3>Object Destructuring</h3>
+      <button class='run' title="Run code"></button>
+      <div class='ace'>
+//syntactic sugar
+let person = {
+  givenName: 'Tom',
+  surName: 'Cornilliac'
+}
+
+let{givenName:first, surName:last} = person;
+alert(`My name is ${first} ${last}`);
+      </div>
+      <aside class="notes">
+        <li>Syntactic sugar</li>
+        <li>Also works with Arrays</li>
+        <li>Function arguments</li>
+      </aside>
+    </section>
+
+
+
+    <section>
+      <h3>Classes</h3>
       <button class='run' title="Run code"></button>
       <div class='ace'>
 class Address {
@@ -218,8 +243,10 @@ alert( new Address( 'Marlborough', 'MA' ).toString() );
       </div>
     </section>
 
+
+
     <section>
-      <h2>Statics</h2>
+      <h3>Statics</h3>
       <button class='run' title="Run code"></button>
       <div class='ace'>
 class Address {
@@ -234,8 +261,10 @@ alert( Address.defaultType() );
       </div>
     </section>
 
+
+
     <section>
-      <h2>Getters/Setters</h2>
+      <h3>Getters/Setters</h3>
       <button class='run' title="Run code"></button>
       <div class='ace'>
 class Person {
@@ -254,8 +283,10 @@ alert( p.fullName );
       </div>
     </section>
 
+
+
     <section>
-    <h2>Inheritence</h2>
+    <h3>Inheritence</h3>
       <button class='run' title="Run code"></button>
       <div class='ace'>
 class View {
@@ -277,8 +308,10 @@ alert(new CollectionView( [ 1,2 ] ).render());
       </div>
     </section>
 
+
+
     <section>
-      <h2>Modules - Named Exports</h2>
+      <h3>Modules - Named Exports</h3>
       <div class='ace'>
 var double = function( x ) {
   return x + x;
@@ -294,8 +327,10 @@ square( 3 );
       </div>
     </section>
 
+
+
     <section>
-      <h2>Modules - Default Export</h2>
+      <h3>Modules - Default Export</h3>
       <div class='ace'>
 export default function square( x ){
   return x * x;
@@ -306,8 +341,10 @@ square( 3 );
       </div>
     </section>
 
+
+
     <section>
-      <h2>Module Loading</h2>
+      <h3>Module Loading</h3>
       <p>Most use <a href="https://github.com/systemjs/systemjs" target="_blank">SystemJS</a> or <a href="https://github.com/ModuleLoader/es6-module-loader" target="_blank">ES6 Module Loader Polyfill</a></p>
       <div class='ace'>
 System.import( "mymodule" ).then( function( m ) {
@@ -316,8 +353,10 @@ System.import( "mymodule" ).then( function( m ) {
       </div>
     </section>
 
+
+
     <section>
-      <h2>Transpiling</h2>
+      <h3>Transpiling</h3>
       <ul>
         <li class="fragment"><a href="https://babeljs.io/" target="_blank">Babel</a> ( formerly 6to5 )</li>
         <li class="fragment"><a href="https://github.com/google/traceur-compiler" target="_blank">Google Traceur</a></li>
@@ -326,8 +365,10 @@ System.import( "mymodule" ).then( function( m ) {
       </ul>
     </section>
 
+
+
     <section>
-      <h2>Transpiling - Integration</h2>
+      <h3>Transpiling - Integration</h3>
       <ul>
         <li class="fragment">Works with all the major build tools</li>
         <li class="fragment">Built in WebStorm Watcher (uses Traceur)</li>
@@ -335,8 +376,10 @@ System.import( "mymodule" ).then( function( m ) {
       </ul>
     </section>
 
+
+
     <section>
-      <h2>Transpiling - Notes</h2>
+      <h3>Transpiling - Notes</h3>
       <ul>
         <li class="fragment">Babel claims better JSX/React support</li>
         <li class="fragment">Babel seems to generate friendly ES5 code</li>
@@ -347,6 +390,12 @@ System.import( "mymodule" ).then( function( m ) {
       </ul>
     </section>
 
+
+
+    <section>
+      <h2>Thank You</h2>
+      <h2>Questions?</h2>
+    </section>
   </div>
 
 </div>
