Latest updates. Added a few slides and some notes

--- a/es6-primer/index.html
+++ b/es6-primer/index.html
@@ -61,6 +61,9 @@
       <p>International standards based organization with a <u>private membership</u>. In addition to ECMAScript,
         manages standards for C#, OpenXML, NFC, CLI and others. Based in Geneva, Switzerland.</p>
       <p><a href="http://www.ecma-international.org/">www.ecma-international.org</a></p>
+      <aside class="notes">
+        Members include: Google, Apple, Microsoft, Adobe, Mozilla, jQuery, IBM, Facebook and many others
+      </aside>
     </section>
 
     <section style="background: rgba(245, 245, 245, 0.70)">
@@ -390,7 +393,11 @@ System.import( "mymodule" ).then( function( m ) {
       </ul>
     </section>
 
-
+    <section style="background: rgba(245, 245, 245, 0.70)">
+      <h3>Compatibility Matrix</h3>
+      <p>ECMAScript support by feature for compilers/polyfills, desktop browsers, servers and mobile.</p>
+      <p><a href="http://kangax.github.io/compat-table/es6/">http://kangax.github.io/compat-table/es6/</a></p>
+    </section>
 
     <section>
       <h2>Thank You</h2>
