--- a/es6-primer/index.html
+++ b/es6-primer/index.html
@@ -426,7 +426,7 @@ System.import( 'mymodule' ).then( function( m ) {
 </div>
 
 <script src="lib/js/head.min.js"></script>
-<script src="js/reveal.js"></script>
+<script src="js/reveal.min.js"></script>
 <script src="js/traceur.js"></script>
 <script src="lib/js/task.js"></script>
 <script src="js/ace/ace.js"></script>
