Minor word change

--- a/es6-primer/index.html
+++ b/es6-primer/index.html
@@ -365,7 +365,7 @@ import * as mystuff from 'mymodule'
 
 
     <section>
-      <h3>Module Loading</h3>
+      <h3>Dynamic Module Loading</h3>
       <p>Check out <a href="https://github.com/ModuleLoader/es6-module-loader" target="_blank">ES6 Module Loader Polyfill</a> and <a href="https://github.com/systemjs/systemjs" target="_blank">SystemJS</a></p>
       <div class='ace'>
 System.import( 'mymodule' ).then( function( m ) {
